@@ -987,6 +987,21 @@ class MS_Model_Member extends MS_Model {
 			);
 		}
 
+		// Check the multisite Email-Domain limitation for new registrations.
+		if ( is_multisite() ) {
+			$domain_list = get_site_option( 'limited_email_domains' );
+
+			if ( $domain_list && is_array( $domain_list ) ) {
+				$email_domain = substr( strrchr( $this->email, '@' ), 1 );
+				if ( ! in_array( $email_domain, $domain_list ) ) {
+					$validation_errors->add(
+						'emaildomain',
+						__( 'That email domain is not allowed for registration, sorry.', MS_TEXT_DOMAIN )
+					);
+				}
+			}
+		}
+
 		$validation_errors = apply_filters(
 			'ms_model_membership_create_new_user_validation_errors',
 			$validation_errors
